--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -67,7 +67,7 @@
 				{* ------------------- Footer ----------------- *}
 				<div id="footer">
 					<p>
-						<strong>todoyu.</strong> Copyright &copy; 2006-{date_format constant(TODOYU_UPDATE) "%Y"} snowflake productions GmbH, Switzerland<br />
+						<strong>todoyu.</strong> Copyright &copy; 2006-{date('Y')} snowflake productions GmbH, Switzerland<br />
 						Extensions are copyright of their respective owners. Go to <a href="http://www.todoyu.com" target="_blank">todoyu.com</a> for details. todoyu comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.<br />
 						Obstructing the appearance of this notice is prohibited by law.<br />
 						Installed version: {constant(TODOYU_VERSION)} ({constant(TODOYU_UPDATE)})
