* Added initial focus to first form field on installer/updater page load

--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -76,4 +76,7 @@
 			</div>
 		</div>
 	</body>
+<script type="text/javascript">
+	Todoyu.Installer.focusFirstFormField($$('form')[0]);
+</script>
 </html>
