* Changed: Extending item listings (fetching additional items) now also keeps list-function parameters, like search filters

--- a/core/view/listing.tmpl
+++ b/core/view/listing.tmpl
@@ -41,7 +41,7 @@
 	{*-------------- Listing show more entries option ---------------*}
 {if ! $noPaging && $page < $pages}
 	<div id="extendlisting">
-		<a href="#pos{$nextPos}" onclick="Todoyu.Listing.more('{$name}',{$page})">Show more</a>
+		<a href="#pos{$nextPos}" onclick='Todoyu.Listing.more("{$name}", {$page}, {$listingParams})'>{Label core.global.showMore}</a>
 	</div>
 
 	<script>
