* added type related generic ID to "listing empty" message element

--- a/core/view/listing.tmpl
+++ b/core/view/listing.tmpl
@@ -40,7 +40,7 @@
 		</tbody>
 	</table>
 {else}
-	<p class="fontWeightBold">{Label core.global.listing.noItems}</p>
+	<p id="{$config.name}-listing-messag-emptylist" class="fontWeightBold">{Label core.global.listing.noItems}</p>
 {/if}
 
 	{*-------------- Listing show more entries option ---------------*}
@@ -55,4 +55,3 @@
 
 	</div>
 {/if}
-
