--- a/core/asset/css/content.scss
+++ b/core/asset/css/content.scss
@@ -11,8 +11,7 @@ div.icon {
 	width:18px;
 	height:18px; }
 
-div.iconLarge,
-span.iconLarge {
+.iconLarge {
 	display:block;
 	float:left;
 	clear:none;
