--- a/core/asset/css/notification.scss
+++ b/core/asset/css/notification.scss
@@ -70,22 +70,68 @@
 /* -------------------
 	Icons
    ------------------- */
-.icon.iconNotifySmall {
+
+.iconNotifyMini,
+.iconNotifySmall,
+.iconNotifyLarge {
 	background: {
 		image:url(../img/notify.png);
-		repeat:no-repeat;
-		position:0 -240px; }
+		repeat:no-repeat; }
 }
 
-span.iconLarge {
-	margin:12px 12px 0 12px;
+.iconNotifySmall {
+	&.warn {
+		background-position: 0 -95px;
+	}
+}
 
-	div.notification & {
-		background:url(../img/notify.png) 0 -348px no-repeat !important; }
+.iconNotifyMini {
+	width:13px;
+	height:13px;
 
-	div.notifictation.reminder & {
-		background:url(../img/notify.png) 0 -544px no-repeat !important; }
+	&.warn {
+		background-position: 0 -240px;
+	 }
+}
 
-	div.confirmation & {
-		background:url(../img/notify.png) 0 -466px no-repeat !important; }
+
+.iconNotifyLarge {
+	&.info {
+		background-position: 0 -390px;
+	 }
+	&.warn {
+		background-position: 0 -350px;
+	  }
+	&.reminder {
+		background-position: 0 -545px;
+	}
+}
+
+
+/*span.iconLarge {*/
+	/*margin:12px 12px 0 12px;*/
+
+	/*div.notification & {*/
+		/*background:url(../img/notify.png) 0 -348px no-repeat !important; }*/
+
+	/*div.notifictation.reminder & {*/
+		/*background:url(../img/notify.png) 0 -544px no-repeat !important; }*/
+
+	/*div.confirmation & {*/
+		/*background:url(../img/notify.png) 0 -466px no-repeat !important; }*/
+/*}*/
+
+
+.dialog .notification {
+	padding:7px;
+
+	h1 {
+	    .label {
+	 		font-size:20px;
+			font-weight: bold;
+			margin-left: 20px;
+			white-space: normal;
+			float: none;
+	    }
+	}
 }
