--- a/core/view/wizard.tmpl
+++ b/core/view/wizard.tmpl
@@ -16,7 +16,7 @@
 			<p class="info">{$info}</p>
 		{/if}
 
-		<form method="post" name="data" action="?ext=core&amp;controller=wizard" id="wizard-form">
+		<form method="post" name="data" action="index.php?ext=core&amp;controller=wizard" id="wizard-form">
 			<input type="hidden" name="action" value="save" />
 			<input type="hidden" name="wizard" value="{$wizardName}" id="wizard-wizard" />
 			<input type="hidden" name="step" value="{$stepName}" id="wizard-step" />
