--- a/core/config/form/role.xml
+++ b/core/config/form/role.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form>
 	<attributes>
-		<attribute name="action">?ext=sysmanager&amp;controller=role</attribute>
+		<attribute name="action">index.php?ext=sysmanager&amp;controller=role</attribute>
 		<attribute name="name">role</attribute>
 	</attributes>
 	<hiddenFields>
