* added date locale format "dateMshort" * removed green BG from popups, white is fine

--- a/core/lib/js/prototype-window/themes/todoyu.css
+++ b/core/lib/js/prototype-window/themes/todoyu.css
@@ -195,7 +195,7 @@
    ------------------------ */
 .dialog_content {
 	font-size:10px;
-	background-color:#f6f8f1;
+	background-color:#fff;
 	color:#ddd;
 	height:auto !important;
 }
