--- a/core/asset/css/headlet.scss
+++ b/core/asset/css/headlet.scss
@@ -14,7 +14,7 @@
 		box-shadow:2px 2px 7px $grey06;
 		background-color:$white; }
 
-	li {
+	> li {
 		position:relative;
 		float:left;
 		z-index:200;
@@ -29,7 +29,7 @@
 				background-color:$white;}
 		}
 
-		a {
+		> a {
 			display:block;
 			position:relative;
 			height:26px;
@@ -41,7 +41,7 @@
 			z-index:200;
 		}
 
-		ul {
+		> ul {
 			position: absolute;
 			top: 25px;
 			left:-1px;
@@ -53,7 +53,7 @@
 			-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=$white, endColorstr=$grey01)";
 		}
 
-		li {
+		> li {
 			float:none;
 			margin:0px;
 			border:none;
