--- a/core/asset/css/headlet.scss
+++ b/core/asset/css/headlet.scss
@@ -50,7 +50,8 @@
 			background-color:$white;
 			background:-moz-linear-gradient($white, $grey01);
 			background:-webkit-gradient(linear, from($white), to($grey01));
-			-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=$white, endColorstr=$grey01)";
+			/* filter fails in sass parser, do it without gradient in IE */
+			/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$white' , endColorstr='$grey01');*/
 		}
 
 		> li {
