--- a/core/asset/css/content.scss
+++ b/core/asset/css/content.scss
@@ -131,7 +131,7 @@ div.infoBox {
 	background:url('../img/bg-headerline.png') repeat-x 0 0;
 
 	label {
-		text-transform:uppercase;
+		/*text-transform:uppercase;*/
 		font-size:10px;
 		letter-spacing:0.3px; }
 
@@ -140,7 +140,7 @@ div.infoBox {
 		font: {
 			size:10px;
 			weight:normal; }
-		text-transform:uppercase;
+		/*text-transform:uppercase;*/
 		white-space:nowrap;
 	}
 
