--- a/core/asset/css/navi.scss
+++ b/core/asset/css/navi.scss
@@ -43,7 +43,7 @@
 			font: {
 				size:13px;
 				weight:bold; }
-			text-transform:uppercase;
+			/*text-transform:uppercase;*/
 			letter-spacing:1px;
 			white-space:nowrap;
 		}
