--- a/core/lib/js/prototype-window/themes/todoyu.css
+++ b/core/lib/js/prototype-window/themes/todoyu.css
@@ -156,7 +156,7 @@
 	letter-spacing:0.4px;
 	font-weight:bold;
 	text-align:left;
-	text-transform:uppercase;
+	/*text-transform:uppercase;*/
 	color:#151614;
 }
 
