--- a/core/asset/css/tab.scss
+++ b/core/asset/css/tab.scss
@@ -50,7 +50,7 @@
 			font: {
 				size:10px;
 				weight:bold; }
-			text-transform:uppercase;
+			/*text-transform:uppercase;*/
 			letter-spacing:1px;
 			white-space:nowrap;
 
