--- a/install/asset/css/installer.css
+++ b/install/asset/css/installer.css
@@ -312,7 +312,7 @@ input#email.adminaccount {
 	#licenseagreement h2 {
 		font-weight:normal;
 		font-size:11px;
-		text-transform:uppercase;
+		/*text-transform:uppercase;*/
 		letter-spacing:1px;
 	}
 
@@ -380,7 +380,7 @@ h1 span.title {
 	float:left;
 	line-height:25px;
 	margin:0 0 0 10px;
-	text-transform:uppercase;
+	/*text-transform:uppercase;*/
 	font-size:10px;
 	letter-spacing:0.3px;
 }
