--- a/core/view/listing.tmpl
+++ b/core/view/listing.tmpl
@@ -18,18 +18,18 @@
 		<tbody>
 
 	{*-------------- Rows ---------------*}
-		{foreach $rows index row}
-			<tr class="{cycle values="odd,even"}">
+		{foreach $rows row}
+			<tr class="{cycle values="odd,even"}" id="{$config.name}-listingrow-{$row.id}">
 				{foreach $config.columns colName label}
 					{$fieldClass = cat($colName Class)}
 					<td class="{$colName} {$row[$fieldClass]}">
-						<span class="{$colName}" {if $colName != 'actions'}title="{htmlencode($row[$colName])}"{/if}>
+						<span class="{$colName}" {if $colName != 'actions'}title="{htmlencode($row.columns[$colName])}"{/if}>
 							{if $colName == 'actions'}
-								{cleanHtml $row[$colName]}
+								{cleanHtml $row.columns[$colName]}
 							{else}
 								{$maxLen = intval($config.truncate.$colName)}
 								{if $maxLen == 0}{$maxLen = 16}{/if}
-								{htmlencode(truncate($row[$colName],$maxLen,'...',true))}
+								{htmlencode(truncate($row.columns[$colName],$maxLen,'...',true))}
 							{/if}
 						</span>
 					</td>
