--- a/core/asset/css/navi.scss
+++ b/core/asset/css/navi.scss
@@ -21,9 +21,9 @@
 		 	-moz-border-radius:10px 10px 0 0;
 		 	-webkit-border-radius:10px 10px 0 0;
 		 	border-radius:10px 10px 0 0;
-		 	-moz-box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
-		 	-webkit-box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
-		 	box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
+		 	-moz-box-shadow:inset 0 -1px 1px rgba(0,0,0,0.15);
+		 	-webkit-box-shadow:inset 0 -1px 1px rgba(0,0,0,0.15);
+		 	box-shadow:inset 0 -1px 1px rgba(0,0,0,0.15);
 
 			&:hover,
 			&.active {
@@ -41,7 +41,7 @@
 			line-height:30px;
 			padding:0 12px;
 			font: {
-				size:13px;
+				size:14px;
 				weight:bold; }
 			/*text-transform:uppercase;*/
 			letter-spacing:1px;
@@ -119,7 +119,7 @@ ul#navi-main-list li {
 				padding:2px 10px 2px 30px;
 				line-height:20px;
 				font: {
-					size:10px;
+					size:11px;
 					weight:normal; }
 
 				&:hover {
