--- a/core/asset/css/tinymce.css
+++ b/core/asset/css/tinymce.css
@@ -14,11 +14,11 @@ ol {
 	list-style-position:outside;
 }
 ul {
-	margin:0px;
+	margin:0;
 	padding:0 0 5px 14px;
 }
 ul li,
-ul li {
+ol li {
 	padding-left:5px;
 }
 ol {
