--- a/core/view/listing.tmpl
+++ b/core/view/listing.tmpl
@@ -40,7 +40,7 @@
 		</tbody>
 	</table>
 {else}
-	<p id="{$config.name}-listing-messag-emptylist" class="fontWeightBold">{Label core.global.listing.noItems}</p>
+	{contentMessage core.global.listing.noItems}
 {/if}
 
 	{*-------------- Listing show more entries option ---------------*}
