--- a/core/view/template/Config.js.tmpl
+++ b/core/view/template/Config.js.tmpl
@@ -25,8 +25,4 @@
  *
  * @namespace	Todoyu.Config
  */
-Todoyu.Config = {
-
-	firstDayOfWeek:	{$firstDayOfWeek}
-
-};
+Todoyu.Config = {json_encode($config)};
