--- a/core/view/listing.tmpl
+++ b/core/view/listing.tmpl
@@ -22,14 +22,25 @@
 			<tr class="{cycle values="odd,even"}" id="{$config.name}-listingrow-{$row.id}">
 				{foreach $config.columns colName label}
 					{$fieldClass = cat($colName Class)}
+					{if is_array($row.columns[$colName])}
+						{$colContent= $row.columns[$colName].content}
+						{$className	= $row.columns[$colName].classname}
+						{$spanID	= $row.columns[$colName].spanID}
+						{$onClick	= $row.columns[$colName].onClick}
+					{else}
+						{$colContent= $row.columns[$colName]}
+						{$className	= ''}
+						{$spanID	= ''}
+						{$onClick	= ''}
+					{/if}
 					<td class="{$colName} {$row[$fieldClass]}">
-						<span class="{$colName}" {if $colName != 'actions'}title="{htmlencode($row.columns[$colName])}"{/if}>
+						<span id="{$spanID}" class="{$colName} {$className}" {if $colName != 'actions'}title="{htmlencode($colContent)}"{/if} {if !empty($onClick)}onclick="{$onClick}"{/if}>
 							{if $colName == 'actions'}
-								{cleanHtml $row.columns[$colName]}
+								{cleanHtml $colContent}
 							{else}
 								{$maxLen = intval($config.truncate.$colName)}
 								{if $maxLen == 0}{$maxLen = 16}{/if}
-								{htmlencode(truncate($row.columns[$colName],$maxLen,'...',true))}
+								{htmlencode(truncate($colContent,$maxLen,'...',true))}
 							{/if}
 						</span>
 					</td>
