--- a/core/asset/css/tab.scss
+++ b/core/asset/css/tab.scss
@@ -48,7 +48,7 @@
 			line-height:26px;
 			padding:0 10px;
 
-			/*text-transform:uppercase;*/
+			text-transform:uppercase;
 			letter-spacing:1px;
 			white-space:nowrap;
 
@@ -63,8 +63,8 @@
 
 			.labeltext {
 				font: {
-				size:12px;
-				weight:bold; }
+					size:10px;
+					weight:bold; }
 			}
 		}
 
