--- a/core/asset/css/navi.scss
+++ b/core/asset/css/navi.scss
@@ -41,9 +41,9 @@
 			line-height:30px;
 			padding:0 12px;
 			font: {
-				size:14px;
+				size:13px;
 				weight:bold; }
-			/*text-transform:uppercase;*/
+			text-transform:uppercase;
 			letter-spacing:1px;
 			white-space:nowrap;
 		}
@@ -119,7 +119,7 @@ ul#navi-main-list li {
 				padding:2px 10px 2px 30px;
 				line-height:20px;
 				font: {
-					size:11px;
+					size:10px;
 					weight:normal; }
 
 				&:hover {
