--- a/core/asset/css/form.scss
+++ b/core/asset/css/form.scss
@@ -95,7 +95,7 @@ form {
 		padding:7px 0;
 		text: {
 			indent:15px;
-			/*transform:uppercase;*/
+			transform:uppercase;
 		}
 		font-weight:bold;
 		border-bottom:1px solid $grey01;
