--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -29,7 +29,7 @@
 
 				<div class="panelWidget">
 					<h1 class="deniedOpen">
-						<span class="title">Todoyu 2.1</span>
+						<span class="title">todoyu</span>
 					</h1>
 					<img src="asset/img/banner.jpg">
 					<p class="slogan">
