--- a/core/asset/css/formrecords.css
+++ b/core/asset/css/formrecords.css
@@ -1,10 +1,10 @@
 .typeRecords input.search {
-	/*border-left: 5px solid red;*/
+	/*border-left:5px solid red;*/
 }
 
 .typeRecords .results {
-	border: 1px solid #CCC;
-	background-color: #FCFCFC;
+	border:1px solid #ccc;
+	background-color:#fcfcfc;
 	border-top:none;
 	margin-top:-1px;
 }
@@ -15,17 +15,17 @@
 }
 
 .typeRecords .results li:hover {
-	background-color: #EEE;
+	background-color:#EEE;
 }
 
 .typeRecords .results li.hot {
-	font-weight: bold;
+	font-weight:bold;
 }
 
 .typeRecords .selection {
 	margin-top:5px;
-	list-style-position: inside;
-	line-height: 150%;
+	list-style-position:inside;
+	line-height:150%;
 }
 
 .typeRecords .selection li {
@@ -38,11 +38,11 @@
 }
 
 .typeRecords li .recordIcon {
-	margin-right: 5px;
+	margin-right:5px;
 }
 
 .typeRecords .selection li .remove {
 	float:right;
 	background:url(../img/icons.png) no-repeat 2px -358px;
-	cursor: pointer;
+	cursor:pointer;
 }
