--- a/install/view/version-selector.tmpl
+++ b/install/view/version-selector.tmpl
@@ -37,10 +37,11 @@
 			<option>2.1.0rc2</option>
 		</optgroup>
 		<optgroup label="2.1 (stable)">
-			<option selected="selected">2.1.0</option>
-			<option selected="selected">2.1.1</option>
-			<option selected="selected">2.1.2</option>
-			<option selected="selected">2.1.3</option>
+			<option>2.1.0</option>
+			<option>2.1.1</option>
+			<option>2.1.2</option>
+			<option>2.1.3</option>
+			<option selected="selected">2.1.4</option>
 		</optgroup>
 	</select>
 	<input type="submit" value="Set last version and start normal update" />
