--- a/core/view/form/FormElement_Textarea.tmpl
+++ b/core/view/form/FormElement_Textarea.tmpl
@@ -4,5 +4,5 @@
 {$numTextRows = sizeof(explode("\n", $valueTemplate))}
 {$autoRows = max($rows, $numTextRows)}
 {$autoRows += 1}
-<textarea name="{$htmlName}" id="{$htmlId}" {if $onclick}onclick="{$onclick}"{/if} onkeyup="Todoyu.Form.autoResizeTextArea('{$htmlId}')" cols="{$cols}" rows="{$autoRows}" class="{$inputClass} {$class}" {if $style}style="{$style}"{/if}>{cleanHtml $valueTemplate}</textarea>
+<textarea name="{$htmlName}" id="{$htmlId}" {if $readonly}readonly="readonly"{/if} {if $onclick}onclick="{$onclick}"{/if} onkeyup="Todoyu.Form.autoResizeTextArea('{$htmlId}')" cols="{$cols}" rows="{$autoRows}" class="{$inputClass} {$class}" {if $style}style="{$style}"{/if}>{cleanHtml $valueTemplate}</textarea>
 {/block}
