* Added latest version to version selector in installer

--- a/install/view/version-selector.tmpl
+++ b/install/view/version-selector.tmpl
@@ -41,7 +41,8 @@
 			<option>2.1.1</option>
 			<option>2.1.2</option>
 			<option>2.1.3</option>
-			<option selected="selected">2.1.4</option>
+			<option>2.1.4</option>
+			<option selected="selected">2.1.5</option>
 		</optgroup>
 	</select>
 	<input type="submit" value="Set last version and start normal update" />
