--- a/core/asset/css/tab.scss
+++ b/core/asset/css/tab.scss
@@ -35,9 +35,8 @@
 		-moz-border-radius:10px 10px 0 0;
 		-webkit-border-radius:10px 10px 0 0;
 		border-radius:10px 10px 0 0;
-		-moz-box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
-		-webkit-box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
-		box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
+		-webkit-box-shadow:0 -1px 1px #D3D7C7 inset;
+		box-shadow:0 -1px 1px #D3D7C7 inset;
 
 		p {
 			display:block;
