--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -8,7 +8,7 @@
 		<link href="{$cssHref}" rel="stylesheet" type="text/css" />
 	{/foreach}
 	{foreach $assets.js jsSrc}
-		<script language="javascript" type="text/javascript" src="{$jsSrc}"></script>
+		<script type="text/javascript" src="{$jsSrc}"></script>
 	{/foreach}
 	<meta http-equiv="expires" content="0" />
 	<meta http-equiv="cache-control" content="no-cache" />
