--- a/core/view/timerange.tmpl
+++ b/core/view/timerange.tmpl
@@ -14,7 +14,7 @@
 	<div class="dates">
 		<div class="start">
 			<input type="text" id="{$id}-start" name="{$name}[start]" />
-			<div class="icon link calendaricon" id="{$id}-start-calicon" title="{Label core.form.dateselector.open}" alt="{Label core.form.dateselector.open}"></div>
+			<div class="icon link calendaricon" id="{$id}-start-calicon" title="{Label core.form.dateselector.open}"></div>
 		</div>
 		<div class="ranges">
 			<span class="chooseRange">{Label core.form.daterange.choose}</span>
@@ -31,7 +31,7 @@
 		</div>
 		<div class="end">
 			<input type="text" id="{$id}-end" name="{$name}[end]" />
-			<div class="icon link calendaricon" id="{$id}-end-calicon" title="{Label core.form.dateselector.open}" alt="{Label core.form.dateselector.open}"></div>
+			<div class="icon link calendaricon" id="{$id}-end-calicon" title="{Label core.form.dateselector.open}"></div>
 		</div>
 	</div>
 	<input type="text" id="{$id}-focus" style="opacity:0;visibility:hidden;width:1px;height:1px" />
