--- a/core/view/htmlmail.tmpl
+++ b/core/view/htmlmail.tmpl
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Todoyu</title>
 <style type="text/css">
 {$styles}
