--- a/core/view/noaccess.tmpl
+++ b/core/view/noaccess.tmpl
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>{Label core.global.noAccess.pageTitle}</title>
 <link type="text/css" rel="stylesheet" media="all" href="core/asset/css/base.css" />
 <link type="text/css" rel="stylesheet" media="all" href="core/asset/css/layout.css" />
