* Added pleaseSelectLabel tag in form

--- a/core/view/select-grouped.tmpl
+++ b/core/view/select-grouped.tmpl
@@ -1,6 +1,6 @@
 <select {$extraAttributes} {if $htmlName}name="{$htmlName}"{/if} {if $htmlId}id="{$htmlId}"{/if} class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $fieldClass}class="{$fieldClass}"{/if}>
 	{if !$multiple && !$noPleaseSelect}
-		<option value="0">{Label core.form.select.pleaseSelect}</option>
+		<option value="0">{if $pleaseSelectLabel}{Label $pleaseSelectLabel}{else}{Label core.form.select.pleaseSelect}{/if}</option>
 		<option value="0" disabled="disabled">---------------------------</option>
 	{/if}
 	{foreach $options label group}
