--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -72,6 +72,6 @@
 		</div>
 	</body>
 <script type="text/javascript">
-	Todoyu.Installer.focusFirstFormField($$('form')[0]);
+	TodoyuInstaller.focusFirstFormField($$('form')[0]);
 </script>
 </html>
