* Bugfix: Duration Pickers configuration failed * Bugfix: Class for fieldset didn't work properly/clean * Added: Form element time was not available

--- a/core/view/form/Fieldset.tmpl
+++ b/core/view/form/Fieldset.tmpl
@@ -1,4 +1,4 @@
-<fieldset id="{$htmlId}" class="{$class|default:$name}">
+<fieldset id="{$htmlId}" class="{$name} {$class}">
 {if $legend}
 	<legend id="{$htmlId}-legend">{Label $legend}</legend>
 {/if}
