* Changed: Group label of selectgrouped is now parsed as label

--- a/core/view/select-grouped.tmpl
+++ b/core/view/select-grouped.tmpl
@@ -5,7 +5,7 @@
 	{/if}
 	{foreach $options label group}
 		{if $label != "none"}
-			<optgroup label="{$label}">
+			<optgroup label="{Label $label}">
 		{/if}
 		{foreach $group option}
 			{$isSelected = false}
