--- a/core/view/template/system.php.tmpl
+++ b/core/view/template/system.php.tmpl
@@ -24,17 +24,9 @@ Todoyu::$CONFIG['SYSTEM']['name'] 			= '{addslashes($name)}';
 Todoyu::$CONFIG['SYSTEM']['locale']			= '{$locale}';
 Todoyu::$CONFIG['SYSTEM']['email']			= '{addslashes($email)}';
 
-	// Mailer settings
-Todoyu::$CONFIG['SYSTEM']['mailer']				= '{$mailer}';
+Todoyu::$CONFIG['SYSTEM']['mailer']			= '{$mailer}';
 {if $mailer=='smtp'}
-Todoyu::$CONFIG['SYSTEM']['smtp_host'] 			= '{$smtp_host}';
-Todoyu::$CONFIG['SYSTEM']['smtp_port']			= '{$smtp_port}';
-Todoyu::$CONFIG['SYSTEM']['smtp_authentication']= '{$smtp_authentication}';
-	{if $smtp_authentication=='1'}
-
-Todoyu::$CONFIG['SYSTEM']['smtp_username'] 		= '{$smtp_username}';
-Todoyu::$CONFIG['SYSTEM']['smtp_password'] 		= '{$smtp_password}';
-	{/if}
+Todoyu::$CONFIG['SYSTEM']['id_smtpaccount']	= {$idSmtpAccount};
 {/if}
 
 	// Date and time settings
