* Added: TodoyuForm takes to $params data and makes it available over ->getParams() and ->getParam() * Added: $limit parameter for TodoyuArray::trimExplode() which is passed directly to explode() * Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode() * Changed: Cleanup radio form element. Removed sql as source type. Support default value

--- a/core/view/form/FormElement_Radio.tmpl
+++ b/core/view/form/FormElement_Radio.tmpl
@@ -2,7 +2,7 @@
 
 {block name="field"}
 	{foreach $options option}
-		<input class="{$inputClass} {$class}" type="radio" name="{$htmlName}" id="{$htmlId}-{$option.value}" value="{htmlencode $option.value}"{if $option.value == $checked} checked="checked"{/if}{if $option.disabled} disabled="disabled"{/if} {$extraAttributes} />
-		<label class="{$class}" for="{$htmlId}-{$option.value}">{$option.label}</label>
+		<input class="{$inputClass} {$class}" type="radio" name="{$htmlName}" id="{$htmlId}-{$option.value}" value="{htmlencode $option.value}"{if $option.value == $value} checked="checked"{/if}{if $option.disabled} disabled="disabled"{/if} {$extraAttributes} />
+		<label class="{$class}" for="{$htmlId}-{$option.value}">{Label $option.label}</label>
 	{/foreach}
 {/block}
